2008-12-15 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSImage.m: White space changes and general clean up.
	* Source/NSImage.m (-removeRepresentation:): Remove also cached
	representations for the current one.
	* Source/NSImage.m (-_cacheForRep:): Don't invalidate a valid
	cached representation.
	* Source/NSImage.m: Move some code from _doImageCache: to
	lockFocusOnRepresentation:

2008-12-14  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSDocument.m (-addWindowController:,-removeWindowController:):
	* Source/NSWindowController.m (-setDocumentEdited):
	* Source/NSWindow.m (-_startBackendWindow):
	Ensure that new windows properly show their document edited status.

2008-12-14  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSDocumentFrameworkPrivate.h:
	* Source/NSApplication.m(-finishLaunching):
	* Source/NSDocumentController.m (-setAutosavingDelay:,
	-reopenDocumentForURL:withContentsOfURL:error:,	-_autosaveDirectory,
	-autosaveDocuments:, -reopenAutosavedDocuments,
	-recordAutosavedDocument:):
	* Source/NSDocument.m (-initForURL:withContentsOfURL:ofType:error,
	-writeWithBackupToFile:ofType:saveOperation:,
	-writeSafelyToURL:ofType:forSaveOperation:error:,
	-revertDocumentToSaved:, close, -setAutosavedContentsFileURL:,
	-autosaveDocumentsWithDelegate:didAutosaveSelector:contextInfo:,
	-_removeAutosavedContentsFile):
	Implement document autosaving.

2008-12-14  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSSavePanel.m (-browserDidScroll:): Perform column
	validation whenever the browser is scrolled, since only the
	contents of the visible columns is validated.

2008-12-13 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSImage.m: Reorganize the image caching code to make it
	easier to understand and change.

2008-12-12 19:36-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSOutlineView.m: Added change suggested by Doug in 
	bug #25078.  This should fix the problem in SVN.

2008-12-12 Fred Kiefer <FredKiefer@gmx.de>
